deploy/k8s/deployment.yaml
# golang-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golang-service
  template:
    metadata:
      labels:
        app: golang-service
    spec:
      containers:
      - name: golang-service
        image: gcr.io/annular-form-401215/{IMAGEN_TAG}:v5
        ports:
        - containerPort: 8888
