deploy/k8s/service.yaml
#golang-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-service
spec:
  selector:
    app: golang-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
  type: ClusterIp
